# ffmsp-greedy

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  gen_data.py
dataset/: 100-300-001.txt  100-300-002.txt  100-300-003.txt  100-300-004.txt  100-300-005.txt  100-300-006.txt  100-300-007.txt  100-300-008.txt  100-300-009.txt  100-300-010.txt  100-300-011.txt  100-300-012.txt  100-300-013.txt  100-300-014.txt  100-300-015.txt  100-300-016.txt  100-300-017.txt  100-300-018.txt  100-300-019.txt  100-300-020.txt  100-300-021.txt  100-300-022.txt  100-300-023.txt  100-300-024.txt  100-300-025.txt  100-300-026.txt  100-300-027.txt  100-300-028.txt  100-300-029.txt  100-300-030.txt  100-300-031.txt  100-300-032.txt  100-300-033.txt  100-300-034.txt  100-300-035.txt  100-300-036.txt  100-300-037.txt  100-300-038.txt  100-300-039.txt  100-300-040.txt  (+561 more)
include/: args.h  greedy.h  rng.h  timer.h
src/: args.cpp  greedy.cpp  main.cpp  main_rnd.cpp  rng.cpp  timer.cpp
